--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 
 :root {
   /* font-family: "Noto Sans KR", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
-  line-height: 1.5;
+  /* line-height: 1.5; */
   font-weight: 400;
 
   /* color-scheme: light dark; */
