--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -1,8 +1,12 @@
 .main {
+    position: sticky;
+    top: 0;
+    left: 0;
+
     width: 100%;
     height: 70px;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
     display: block;
 
@@ -14,7 +18,7 @@
 }
 
 .main > .logo {
-    height: 55px;
+    height: 25px;
 }
 
 .main > .menu {
