--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -101,3 +101,42 @@
 .search_main > .popular_tags > div:hover {
     text-decoration: underline;
 }
+
+/* .highlight_bg {
+    width: 100%;
+    height: 500px;
+
+    margin-top: 100px;
+} */
+ 
+.highlight_bg {
+    width: 100%;
+    height: 500px;
+
+    margin-top: 100px;
+
+    background: url('../../assets/highlight_bg.png');
+    background-size: 100% 100%;
+}
+
+.highlight_section {
+    margin-top: -250px;
+}
+
+.highlight_section > .title_info > div {
+    font-size: 30px;   
+}
+
+.highlight_section > .title_info > div:nth-child(2) {
+    font-weight: 800;
+}
+
+.highlight_section > .highlight_list {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-top: 10px;
+}
