회원가입 페이지 2

--- a/client/src/components/Login/login.module.css
+++ b/client/src/components/Login/login.module.css
@@ -74,7 +74,7 @@
 
     border: none;
     border-radius: 3px;
-    background-color: #88D57A;
+    background-color: var(--green-color);
     color: white;
 }
 
