--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,7 @@ body {
   min-height: 100vh;
 }
 
-header, button, main, div, section {
+header, button, main, div, section, article {
   box-sizing: border-box;
 }
 
