--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,7 @@
   --text-color-black: #3D3D3D;
   --header-height: 70px;
   --green-color: #88D57A;
+  --red-color: #F15F5F;
   --thickn-green-color: #0ED951;
 }
 
