--- a/client/src/components/Setting/settingSecurity.module.css
+++ b/client/src/components/Setting/settingSecurity.module.css
@@ -1,4 +1,69 @@
-.title {
-    font-size: 25px;
-    margin: 0;
+.slider_toggle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.slider_toggle > .toggle {
+    cursor: pointer;
+}
+
+.slider_toggle > .toggle > input {
+    display: none;    
+}
+
+.slider_toggle > .toggle > label {
+    position: relative;
+    display: block;
+    
+    width: 50px;
+    height: 20px;
+
+    background-color: #eeeeee;
+    border-radius: 30px;
+
+    cursor: pointer;
+
+    transition: background-color 500ms;
+}
+
+/* 그거 동그라미 */
+.slider_toggle > .toggle > label::after {
+    content: '';
+    
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    transition: left 200ms;
+}
+
+.slider_toggle > .toggle > input:checked + label {
+    background-color: var(--green-color);
+}
+
+.slider_toggle > .toggle > input:checked + label::after {
+    left: calc(50px - 25px);
+}
+
+.slider_toggle > section > .head {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.slider_toggle > section > .sub {
+    font-size: 15px;
+    color: #999999;
+}
+
+.main > .slider_toggle:not(:first-child) {
+    margin-top: 20px;
 }
