--- a/client/src/components/Recycle/button.module.css
+++ b/client/src/components/Recycle/button.module.css
@@ -10,3 +10,19 @@
     border: none;
     border-radius: 4px;
 }
+
+.icon_btn {
+    width: 25px;
+    height: 25px;
+    
+    padding: 0;
+    margin: 0;
+
+    background-color: transparent;
+    border: none;
+}
+
+.icon_btn > .ico {
+    width: 100%;
+    height: 100%;
+}
