--- a/client/src/components/Write/write.module.css
+++ b/client/src/components/Write/write.module.css
@@ -127,3 +127,114 @@
     margin-top: 40px;
     margin-bottom: 20px;
 }
+
+.temp_main {
+    position: fixed;
+
+    width: 100%;
+    height: 100%;
+    
+    top: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.temp_main > .box {
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 600px;
+    height: 600px;
+
+    /* padding: 23px 20px; */
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+    background-color: #f9f9f9;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.temp_main > .box > .head {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    flex-shrink: 0;
+
+    padding: 0 20px;
+    padding-top: 23px;
+
+    height: max-content;
+}
+
+.temp_main > .box > .head > h2 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.temp_main > .box > .head > .close_btn {
+    width: 25px;
+    height: 25px;
+
+    padding: 0;
+    margin: 0;
+    
+    background-color: transparent;
+    border: none;
+}
+
+.temp_main > .box > .head > .close_btn > img {
+    width: 100%;
+    height: 100%;
+}
+
+.temp_main > .box > .list {
+    flex-grow: 1;
+    
+    margin-top: 15px;
+    margin-bottom: 15px;
+    height: 0;
+
+    overflow: auto;
+
+    padding: 15px 20px;
+}
+
+.temp_main > .box > .list > .item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    height: max-content;
+    padding: 10px 13px;
+
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #FFF;
+}
+
+.temp_main > .box > .list > .item:not(:first-child) {
+    margin-top: 10px;
+}
+
+.temp_main > .box > .list > .item > .detail > .title {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.temp_main > .box > .list > .item > .detail > .sub {
+    color: #999999;
+    font-size: 13px;
+    margin-top: 2px;
+}
+
+.temp_main > .box > .list > .item > .interaction {
+    display: flex;
+    gap: 0 10px;
+}
