--- a/client/src/components/Write/write.module.css
+++ b/client/src/components/Write/write.module.css
@@ -238,3 +238,36 @@
     display: flex;
     gap: 0 10px;
 }
+
+.temp_main.enter {
+    opacity: 0;
+}
+
+.temp_main.enter > .box {
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.temp_main.enter_active {
+    opacity: 1;
+    transition: opacity 300ms;
+}
+
+.temp_main.enter_active > .box {
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 300ms;
+}
+
+.temp_main.exit {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.temp_main.exit_active {
+    opacity: 0;
+    transition: opacity 300ms;
+}
+
+.temp_main.exit_active > .box {
+    transform: translate(-50%, -50%) scale(0.9);
+    transition: transform 300ms;
+}
