--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -108,3 +108,44 @@
     width: 18px;
     height: 18px;
 }
+
+.main > .content > .chat_main {
+    margin-bottom: 20px;
+}
+
+.main > .content > .chat_main > h2 {
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+.main > .content > .chat_main > h2 > span {
+    color: #88D57A;
+}
+
+.main > .content > .chat_main > .input_container {
+}
+
+.main > .content > .chat_main > .input_container > textarea {
+    width: 100%;
+    height: 70px;
+    padding: 10px 10px;
+    box-sizing: border-box;
+
+    background-color: #EFEFEF;
+    border-radius: 6px;
+    border: none;
+
+    outline: none;
+
+    resize: none;
+}
+
+.main > .content > .chat_main > .input_container > textarea::placeholder {
+    color: #A6A6A6;
+    font-size: 14px;
+}
+
+.main > .content > .chat_main > .input_container > button {
+    display: block;
+    margin-left: auto;
+}
