--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -8,6 +8,11 @@
 
 .main > .popular {
     width: 300px;
+    margin-left: 40px;
+}
+
+.main > .popular > h2 {
+    font-size: 20px;
 }
 
 .main > .content > .title {
