--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -56,3 +56,55 @@
 .main > .menu > .search {
     height: 30px;
 }
+
+.main > .account_menu {
+    position: absolute;
+
+    right: 30px;
+    bottom: 5px;
+
+    transform: translateY(100%);
+
+    width: 150px;
+    height: max-content;
+
+    padding: 6px;
+
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+}
+
+.main > .account_menu > button {
+    width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+
+    padding: 5px 8px;
+    border: none;
+    border-radius: 4px;
+
+    background-color: transparent;
+    
+    text-align: left;
+}
+
+.main > .account_menu > button:not(:first-child) {
+    margin-top: 4px;
+}
+
+.main > .account_menu > button:hover {
+    background-color: rgba(0, 0, 0, 0.02);
+}
+
+.main > .account_menu > button > section {
+    display: flex;
+    align-items: center;
+    
+    gap: 0 6px;
+}
+
+.main > .account_menu > button > section > img {
+    width: 16px;
+    height: 16px;
+}
