--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -71,11 +71,19 @@
     padding: 6px;
 
     background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
 }
 
-.main > .account_menu > button {
+.main > .account_menu > a {
+    color: black;
+}
+
+.main > .account_menu > a:not(:first-child) > section {
+    margin-top: 3px;
+}
+
+.main > .account_menu > a > section {
     width: 100%;
     font-size: 14px;
     font-weight: 500;
@@ -89,22 +97,44 @@
     text-align: left;
 }
 
-.main > .account_menu > button:not(:first-child) {
+.main > .account_menu > a > section:not(:first-child) {
     margin-top: 4px;
 }
 
-.main > .account_menu > button:hover {
-    background-color: rgba(0, 0, 0, 0.02);
+.main > .account_menu > a > section:hover {
+    background-color: rgba(0, 0, 0, 0.04);
 }
 
-.main > .account_menu > button > section {
+.main > .account_menu > a > section {
     display: flex;
     align-items: center;
-    
+
     gap: 0 6px;
 }
 
-.main > .account_menu > button > section > img {
+.main > .account_menu > a > section > img {
     width: 16px;
     height: 16px;
+}
+
+/* 애니메이션 */
+.main > .account_menu.enter {
+    opacity: 0;
+    transform: translateY(100%) scale(0.9);
+}
+
+.main > .account_menu.enter_active {
+    opacity: 1;
+    transform: translateY(100%) scale(1);
+    transition: transform 300ms, opacity 300ms;
+}
+
+.main > .account_menu.exit {
+    opacity: 1;
+}
+
+.main > .account_menu.exit_active {
+    opacity: 0;
+    transform: translateY(100%) scale(0.9);
+    transition: transform 300ms, opacity 300ms;
 }
