--- a/client/src/components/Search/search.module.css
+++ b/client/src/components/Search/search.module.css
@@ -26,3 +26,39 @@
     font-weight: 500;
     color: white;
 }
+
+.main > .pagination {
+    display: flex;
+    justify-content: center;
+
+    gap: 0 6px;
+
+    height: 30px;
+}
+
+.main > .pagination > button {
+    height: 100%;
+    
+    font-size: 15px;
+    font-weight: 500;
+
+    border: none;
+    padding: 5px 12px;
+    border-radius: 5px;
+
+    background-color: transparent;
+}
+
+.main > .pagination > button:hover {
+    background-color: #F1F1F1;
+}
+
+.main > .pagination > button.icon > img {
+    height: 100%;
+    display: block;
+}
+
+.main > .pagination > button.icon {
+    padding: 9px;
+    width: 32px;
+}
