--- a/client/src/components/Search/search.module.css
+++ b/client/src/components/Search/search.module.css
@@ -62,3 +62,38 @@
     padding: 9px;
     width: 32px;
 }
+
+.main > .list {
+    margin: 15px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 18px;
+}
+
+.main > .list > .item {
+    width: 23.8888888888%;
+}
+
+@media screen and (max-width: 1234px) {
+    .main > .list > .item {
+        width: 23.55555%;
+    }
+}
+
+@media screen and (max-width: 953px) {
+    .main > .list > .item {
+        width: 31.33333%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .main > .list > .item {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .main > .list > .item {
+        width: 100%;
+    }
+}
