--- a/client/src/components/Login/login.module.css
+++ b/client/src/components/Login/login.module.css
@@ -45,16 +45,34 @@
     width: 100%;
 
     padding: 10px 13px;
-    margin-bottom: 10px;
 
     font-size: 15px;
     font-weight: 500;
 
     background-color: #F7F7F8;
-    border: none;
+
+    border: 2px solid transparent;
     border-radius: 5px;
+    outline: none;
 
     box-sizing: border-box;
+}
+
+.main > .login_form > input:not(:first-child) {
+    margin-top: 10px;
+}
+
+.main > .login_form > input.error {
+    border-color: var(--red-color);
+}
+
+.main > .login_form > .errorT {
+    width: 100%;
+    
+    font-size: 13px;
+    color: var(--red-color);
+
+    margin-top: 3px;
 }
 
 .main > .login_form > .find {
@@ -62,6 +80,8 @@
     
     font-size: 13px;
     color: #ABABAB;
+
+    margin-top: 10px;
 }
 
 .main > .login_form > .login {
