--- a/client/src/components/SignUp/signup.module.css
+++ b/client/src/components/SignUp/signup.module.css
@@ -25,3 +25,40 @@
     font-size: 16px;
     font-weight: 500;
 }
+
+.main > .content_wrapper {
+    position: relative;
+    margin-top: 50px;
+}
+
+.main > .content_wrapper > .content {
+    width: 100%;
+}
+
+.main > .content_wrapper > .content.enter {
+    position: absolute;
+    top: 0;
+
+    transform: translateX(30%);
+    opacity: 0;
+}
+
+.main > .content_wrapper > .content.enter_active {
+    transform: translateX(0%);
+    opacity: 1;
+    transition: transform 300ms, opacity 300ms;
+}
+
+.main > .content_wrapper > .content.exit {
+    position: absolute;
+    top: 0;
+
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+.main > .content_wrapper > .content.exit_active {
+    transform: translateX(-30%);
+    opacity: 0;
+    transition: transform 300ms, opacity 300ms;
+}
