--- a/client/src/components/SignUp/signupForm.module.css
+++ b/client/src/components/SignUp/signupForm.module.css
@@ -17,6 +17,21 @@
     width: 100%;
     padding: 8px 10px;
     margin-top: 5px;
+    margin-bottom: 5px;
+
+    border: 2px solid transparent;
+}
+
+.main > section > .input.error {
+    border-color: var(--red-color);
+}
+
+.main > section > .errorT {
+    color: var(--red-color);
+    font-size: 13px;
+    font-weight: 500;
+
+    margin-bottom: 10px;
 }
 
 .main > section > .sub {
