--- a/client/src/components/Notify/notify.module.css
+++ b/client/src/components/Notify/notify.module.css
@@ -1,8 +1,9 @@
 .main {
-    position: absolute;
+    position: fixed;
+    top: 70px;
     right: 20px;
     
-    margin-top: 10px;
+    /* margin-top: 10px; */
 
     width: 300px;
     height: max-content;
