--- a/client/src/components/Recycle/button.module.css
+++ b/client/src/components/Recycle/button.module.css
@@ -26,3 +26,15 @@
     width: 100%;
     height: 100%;
 }
+
+.spinner_btn {
+    display: flex;
+    align-items: center;
+}
+
+.spinner_btn > .spinner {
+    width: 20px;
+    height: 20px;
+
+    margin-right: 10px;
+}
