--- a/client/src/components/Write/write.module.css
+++ b/client/src/components/Write/write.module.css
@@ -217,6 +217,8 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #FFF;
+
+    cursor: pointer;
 }
 
 .temp_main > .box > .list > .item:not(:first-child) {
@@ -303,4 +305,16 @@
 
 .load > .interaction_main > .btn:nth-child(2) {
     width: 60px;
+}
+
+/* 로딩 - 임시글 목록 */
+.load_item {
+    width: 100%;
+    height: 60px;
+
+    border-radius: 10px;
+}
+
+.load_item:not(:first-child) {
+    margin-top: 10px;
 }
