--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -100,6 +100,10 @@
     font-size: 14px;
 }
 
+.main > .content > .interaction > button:hover {
+    border: 1px solid #b7b7b7;
+}
+
 .main > .content > .interaction > .good > section {
     display: flex;
     align-items: center;
