--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -168,6 +168,8 @@
 
 .main > .content > .chat_main > .list > .box > .detail {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .main > .content > .chat_main > .list > .box > .detail > .info {
@@ -192,6 +194,17 @@
 .main > .content > .chat_main > .list > .box > .detail > .info > .date {
     color: #AAAAAA;
     font-size: 12px;
+}
+
+.main > .content > .chat_main > .list > .box > .detail > .other {
+    width: 20px;   
+    height: 20px;
+
+    visibility: hidden;
+}
+
+.main > .content > .chat_main > .list > .box:hover > .detail > .other {
+    visibility: visible;
 }
 
 .main > .content > .chat_main > .list > .box > .content {
@@ -248,6 +261,32 @@
 .main > .content > .chat_main > .list > .box > .interaction > .reply_open:hover {
     background-color: rgba(0, 0, 0, 0.05);
     color: #585858;
+}
+
+.main > .content > .chat_main button.more {
+    width: 100%;
+    padding: 8px 0;
+    background-color: #EEEEEE;
+    
+    border: none;
+    border-radius: 5px;
+    
+    color: var(--text-color-black);
+    font-size: 14px;
+    font-weight: 500;
+    
+    margin-top: 20px;
+}
+
+.main > .content > .chat_main button.more_reply {
+    background-color: #EEEEEE;
+    border-radius: 30px;
+
+    padding: 8px 15px;
+    border: none;
+    color: var(--text-color-black);
+    font-weight: 500;
+    margin-top: 5px;
 }
 
 .main > .popular > .item {
@@ -320,3 +359,4 @@
     width: 100%;
     height: 500px;
 }
+
