--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -126,23 +126,30 @@
 
 .main > .content > .chat_main > h2 {
     margin: 0;
-    margin-bottom: 8px;
 }
 
 .main > .content > .chat_main > h2 > span {
     color: #88D57A;
 }
 
-.main > .content > .chat_main > .input_container > .send {
+.main > .content > .chat_main .input_container {
+    margin-top: 8px;
+}
+
+.main > .content > .chat_main .input_container > .interaction > .send {
     display: flex;
     transition: background-color 300ms;
 }
 
-.main > .content > .chat_main > .input_container > .send:disabled {
+.main > .content > .chat_main .input_container > .interaction > .send:disabled {
     background-color: #dadada;
 }
 
-.main > .content > .chat_main > .input_container > textarea {
+.main > .content > .chat_main .input_container > .interaction > .close {
+    background-color: #cecece;
+}
+
+.main > .content > .chat_main .input_container > textarea {
     width: 100%;
     height: 70px;
     padding: 10px 10px;
@@ -157,14 +164,15 @@
     resize: none;
 }
 
-.main > .content > .chat_main > .input_container > textarea::placeholder {
+.main > .content > .chat_main .input_container > textarea::placeholder {
     color: #A6A6A6;
     font-size: 14px;
 }
 
-.main > .content > .chat_main > .input_container > button {
-    display: block;
-    margin-left: auto;
+.main > .content > .chat_main .input_container > .interaction {
+    display: flex;
+    gap: 0 5px;
+    justify-content: right;
 }
 
 .main > .content > .chat_main > .list > .box:not(:first-child) {
