--- a/client/src/components/ContextMenu/contextMenu.module.css
+++ b/client/src/components/ContextMenu/contextMenu.module.css
@@ -11,7 +11,7 @@
   position: absolute;
   right: 30px;
   bottom: 5px;
-  transform: translateY(100%);
+  transform: translate(20px, 20px);
   width: 150px;
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -48,11 +48,11 @@
 }
 .main > .context_menu.enter {
   opacity: 0;
-  transform: translateY(100%) scale(0.9);
+  transform: translate(20px, 20px) scale(0.9);
 }
 .main > .context_menu.enter_active {
   opacity: 1;
-  transform: translateY(100%) scale(1);
+  transform: translate(20px, 20px) scale(1);
   transition: transform 300ms, opacity 300ms;
 }
 .main > .context_menu.exit {
@@ -60,7 +60,7 @@
 }
 .main > .context_menu.exit_active {
   opacity: 0;
-  transform: translateY(100%) scale(0.9);
+  transform: translate(20px, 20px) scale(0.9);
   transition: transform 300ms, opacity 300ms;
 }
 /*# sourceMappingURL=contextMenu.module.css.map */
