--- a/client/src/components/Search/search.module.css
+++ b/client/src/components/Search/search.module.css
@@ -6,6 +6,16 @@
 
 .main > .head > .info {
     font-size: 16px;
+    display: flex;
+}
+
+.main > .head > .info > .amount {
+    margin-left: 5px;
+}
+
+.main > .head > .info > .amount > .load {
+    display: inline-block;
+    width: 100px;
 }
 
 .main > .head > .sort > button {
