--- a/client/src/components/UserContents/userContents.module.css
+++ b/client/src/components/UserContents/userContents.module.css
@@ -4,6 +4,6 @@
   justify-content: space-between;
 }
 .header > h1 {
-  max-resolution: 0;
+  margin: 0;
 }
 /*# sourceMappingURL=userContents.module.css.map */
