--- a/client/src/components/UserPage/userpage.module.css
+++ b/client/src/components/UserPage/userpage.module.css
@@ -98,6 +98,18 @@
     margin-top: 20px;
 }
 
+.list > section > .empty_box {
+    width: 100%;
+    height: 150px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 15px;
+    color: gray;
+}
+
 /* 로당 */
 .profile.loading > .left > .detail > .name {
     width: 100px;
