--- a/client/src/components/App/app.module.css
+++ b/client/src/components/App/app.module.css
@@ -1,11 +1,11 @@
 .enter {
-    position: absolute;
-    width: 100%;
-
+    position: relative;
     background-color: white;
 
     opacity: 0;
     transition: opacity 300ms;
+
+    z-index: 1;
 }
 
 .enter_active {
@@ -13,8 +13,14 @@
 }
 
 .exit {
+    position: fixed;
+    width: 100%;
+    top: var(--header-height);
+
     opacity: 1;
     transition: opacity 300ms;
+
+    z-index: 0;
 }
 
 .exit_active {
