#20 아바타 편집 창 만듬

--- a/client/src/components/Setting/settingGeneric.module.css
+++ b/client/src/components/Setting/settingGeneric.module.css
@@ -92,3 +92,14 @@
 
     display: block;
 }
+
+.main > .spinner {
+    width: 25px;
+    height: 25px;
+
+    margin: 0 auto;
+
+    background: 
+    radial-gradient(farthest-side,#000000 94%,#0000) top/5px 5px no-repeat,
+    conic-gradient(#0000 30%,#000000);
+}
