--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,7 @@
   /* 전역 변수 */
   --screen-max-width: 1300px;
   --text-color-black: #3D3D3D;
+  --gray-color: #D1D1D1;
   --header-height: 70px;
   --green-color: #88D57A;
   --red-color: #F15F5F;
