#20 프론트엔드 비밀번호 변경

--- a/client/src/components/Setting/settingPassword.module.css
+++ b/client/src/components/Setting/settingPassword.module.css
@@ -13,8 +13,10 @@
 .change_btn {
     margin-top: 10px;
     margin-left: auto;
+}
 
-    display: block;
+.change_btn:disabled {
+    background-color: var(--gray-color);
 }
 
 .input_field > .input {
