--- a/client/src/components/Write/write.module.css
+++ b/client/src/components/Write/write.module.css
@@ -125,7 +125,74 @@
 .editor_container {
     height: 600px;
     margin-top: 40px;
+    margin-bottom: 10px;
+}
+
+.thumbnail_main {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
     margin-bottom: 20px;
+}
+
+.thumbnail_main > .box {
+    position: relative;
+
+    width: 200px;
+    height: 100px;
+    border-radius: 10px;
+
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.thumbnail_main > .box > .bg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.thumbnail_main > .box > .edit {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    top: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(3px);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thumbnail_main > .box > .edit > img {
+    width: 30px;
+}
+
+.thumbnail_main > .box.empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #F9F9F9;
+}
+
+.thumbnail_main > .box.empty > img {
+    width: 40px;
+}
+
+.thumbnail_main > .box.empty > p {
+    color: #999999;
+    font-size: 12px;
+    
+
+    margin: 0;
+    margin-top: 3px;
 }
 
 .temp_main {
