--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -116,9 +116,14 @@
     height: 18px;
 }
 
-.main > .content > .interaction > .share > img {
+.main > .content > .interaction > .share > img,
+.main > .content > .interaction > .other > img {
     width: 18px;
     height: 18px;
+}
+
+.main > .content > .interaction > .other > img {
+    opacity: 0.5;
 }
 
 .main > .content > .chat_main {
