--- a/client/src/components/UserPage/userpage.module.css
+++ b/client/src/components/UserPage/userpage.module.css
@@ -1,6 +1,8 @@
 .profile {
     display: flex;
     justify-content: space-between;
+
+    margin-bottom: 10px;
 }
 
 .profile > section {
@@ -68,9 +70,6 @@
 .links {
     display: flex;
     align-items: center;
-
-    margin-top: 10px;
-    margin-bottom: 30px;
 }
 
 .links > span {
@@ -98,6 +97,10 @@
     margin-top: 20px;
 }
 
+.list.first {
+    margin-top: 50px;
+}
+
 .list > section > .empty_box {
     width: 100%;
     height: 150px;
@@ -108,6 +111,17 @@
 
     font-size: 15px;
     color: gray;
+}
+
+.ban_banner{
+    color: white;
+    font-weight: 500;
+    font-size: 15px;
+
+    background-color: var(--red-color);
+    padding: 10px 10px;
+
+    margin-top: 10px;
 }
 
 /* 로당 */
