--- a/client/src/components/Login/login.module.css
+++ b/client/src/components/Login/login.module.css
@@ -130,7 +130,7 @@
     gap: 0 20px;
 }
 
-.main > .social_login > button {
+.main > .social_login > a > button {
     width: 55px;
     height: 55px;
 
@@ -141,12 +141,12 @@
     border-radius: 50%;
 }
 
-.main > .social_login > button > img {
+.main > .social_login > a > button > img {
     width: 100%;
     height: 100%;
 }
 
-.main > .social_login > button.discord {
+.main > .social_login > a > button.discord {
     background-color: #5865F2;
 }
 
