--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -19,8 +19,29 @@
     z-index: 99;
 }
 
+.main > .logo_container {
+    position: relative;
+}
+
 .main > a > .logo {
     height: 25px;
+}
+
+.main > a > .beta {
+    position: absolute;
+   
+    bottom: 0px;
+    right: -8px;
+
+    transform: translate(100%, -50%);
+    
+    padding: 2px 5px;
+    border-radius: 5px;
+
+    font-size: 10px;
+    font-weight: bold;
+    color: white;
+    background: linear-gradient(120deg, rgb(255, 63, 57), #7519ff);
 }
 
 .main > .menu {
