--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: space-between;
 
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(30px);
+
     padding: 0 30px;
 
     z-index: 99;
