--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -47,15 +47,37 @@
     padding: 0 15px;
 }
 
-.search_main > .popular_tags > div {
+.search_main > .popular_tags > a {
     font-size: 13px;
     color: #8F8F8F;
 
     cursor: pointer;
 }
 
-.search_main > .popular_tags > div:hover {
+.search_main > .popular_tags > a:hover {
     text-decoration: underline;
+}
+
+.search_main > .popular_tags > .loading {
+    width: 50px;
+    height: 15px;
+}
+
+.search_main > .popular_tags > .loading:nth-child(2) {
+    width: 30px;
+}
+
+.search_main > .popular_tags > .loading:nth-child(3) {
+    width: 100px;
+}
+
+.search_main > .popular_tags > .loading:nth-child(4) {
+    width: 60px;
+}
+
+.search_main > .popular_tags > .title {
+    margin: 0;
+    font-size: 13px;
 }
 
 /* .highlight_bg {
