#37 홈화면 최근 트렌드 개선

--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -122,5 +122,20 @@
 }
 
 .popular_list {
-    margin-top: 20px;
+    margin-top: -200px;
+}
+
+.popular_list > .head {
+    margin: 0;
+}
+
+.popular_list > section > h2 > section {
+    display: flex;
+    align-items: center;
+
+    gap: 0 6px;
+}
+
+.popular_list > section > h2 img {
+    width: 33px;
 }
