--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -33,9 +33,10 @@
 
 .search_main {
     width: 600px;
+    max-width: 100%;
+
     height: auto;
 
-    margin: 0 auto;
     margin-top: 20px;
 }
 
@@ -138,4 +139,15 @@
 
 .popular_list > section > h2 img {
     width: 33px;
+}
+
+@media screen and (max-width: 500px) {
+    .title_section > img {
+        height: 40px;
+    }
+    .title_section > div {
+        transform: scale(0.8);
+        margin-top: 10px;
+        width: max-content;
+    }
 }
