#32 헤더 모바일 메뉴 버튼

--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -193,3 +193,8 @@
     transform: translateY(100%) scale(0.9);
     transition: transform 300ms, opacity 300ms;
 }
+
+.main > .menu > .more {
+    width: 20px;
+    margin-left: 10px;
+}
