--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -371,3 +371,15 @@
     height: 500px;
 }
 
+@media screen and (max-width: 900px) {
+    .main {
+        flex-direction: column;
+    }
+
+    .main > .popular {
+        width: 100%;
+
+        margin: 0;
+        margin-top: 20px;
+    }
+}
