--- a/client/src/components/Recycle/TypeSelect/typeSelect.module.css
+++ b/client/src/components/Recycle/TypeSelect/typeSelect.module.css
@@ -3,9 +3,12 @@
   padding: 0 13px;
   border: none;
   border-radius: 30px;
-  margin-left: 10px;
   color: rgb(105, 105, 105);
   background-color: #F6F6F6;
+}
+
+.main > button:not(:first-child) {
+  margin-left: 10px;
 }
 
 .main > button.active {
