#32 유저 콘텐츠 모바일 대응

--- a/client/src/components/UserContents/userContents.module.scss
+++ b/client/src/components/UserContents/userContents.module.scss
@@ -6,4 +6,12 @@
     & > h1 {
         margin: 0;
     }
+
+    @media screen and (max-width: 500px) {
+        & {
+            flex-direction: column;
+            align-items: start;
+            gap: 5px 0;
+        }
+    }
 }
