--- a/client/src/components/UserContents/userContents.module.css
+++ b/client/src/components/UserContents/userContents.module.css
@@ -6,4 +6,11 @@
 .header > h1 {
   margin: 0;
 }
+@media screen and (max-width: 500px) {
+  .header {
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+  }
+}
 /*# sourceMappingURL=userContents.module.css.map */
