--- a/client/src/components/Write/write.module.css
+++ b/client/src/components/Write/write.module.css
@@ -232,7 +232,10 @@
     transform: translate(-50%, -50%);
 
     width: 600px;
+    max-width: 100%;
+
     height: 600px;
+    max-height: 100%;
 
     /* padding: 23px 20px; */
     border-radius: 20px;
