--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -47,17 +47,17 @@
     color: #616161;
 }
 
-.main > .side > .index > ul > li:not(:first-child) {
+.main > .side > .index > ul > *:not(:first-child) {
     margin-top: 3px;
 }
 
-.main > .side > .index > ul > li.h2 {
+.main > .side > .index > ul > .h2 {
     margin-left: 16px;
 }
-.main > .side > .index > ul > li.h3 {
+.main > .side > .index > ul > .h3 {
     margin-left: calc(16px * 2);
 }
-.main > .side > .index > ul > li.h4 {
+.main > .side > .index > ul > .h4 {
     margin-left: calc(16px * 3);
 }
 
@@ -73,6 +73,34 @@
 
     background-color: var(--green-color);
     border-radius: 50%;
+}
+
+.main > .side > .index > ul.pre > .box {
+    height: 16px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(1) {
+    width: 60px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(2) {
+    width: 100px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(3) {
+    width: 75px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(4) {
+    width: 150px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(5) {
+    width: 60px;
+}
+
+.main > .side > .index > ul.pre > .box:nth-child(6) {
+    width: 180px;
 }
 
 .main > .content > .title {
