--- a/client/src/components/Recycle/HeadMenu/headmenu.module.css
+++ b/client/src/components/Recycle/HeadMenu/headmenu.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
 
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
 }
 
 .main > h2 {
