새로운 게시글 카테고리 추가

--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -126,6 +126,10 @@
     margin-top: -200px;
 }
 
+.latest_list {
+    margin-top: 50px;
+}
+
 .post_section > section > h2 > section {
     display: flex;
     align-items: center;
